recovering colciencias project ideas

--- a/Ficha-2011_bsm.tex
+++ b/Ficha-2011_bsm.tex
@@ -117,81 +117,6 @@ La ficha técnica es el resumen del proyecto, con una extensión máxima de seis
   \textbf{\large DESCRIPCIÓN DEL PROYECTO}
 \end{center}
 
-% \bigskip
-% \begin{itemize}
-
-%    \item
-% {\bf Título del Proyecto } \\
-% Computing  Yukawa couplings for Up quarks and neutrinos in $SU(5)\times U(1)$
-
-%    \item
-% {\bf Nombre Investigador Principal }\\  Diego Restrepo.
-
-%    \item
-% {\bf Teléfono y Dirección Electrónica  }\\ Tel.: +57-4-2105635 \quad
-% E-mail: {\tt restrepo@udea.edu.co }
-
-%    \item
-% {\bf Nombre del Grupo de Investigación }\\
-% Grupo de  Fenomenología de Interacciones Fundamentales. \\
-% El Grupo apoya los programas de posgrado de Maestría y de Doctorado
-% del Instituto de Física.
-
-%    \item
-% {\bf Categoría del grupo en la convocatoria Colciencias}\\
-% Grupo A.
-
-
-% \item \textbf{Indicar si el grupo aplicó a estrategia de sostenibilidad 2005-2006 y cual fue el resultado}\\
-%  El grupo aplicó a la sostenibilidad 2005-2006 con los siguientes resultados:
-%  \begin{itemize}
-%  \item Número de publicaciones en revistas internacionales: 12
-%  \item Financiación Externa: 2 proyectos de Colciencias por valor de 220 millones
-%  \item Estudiantes de Maestría Graduados: 4
-%  \item Estudiantes de Doctorado Graduados: 1
-%  \end{itemize}
-
-
-% \item
-%   {\bf Nombres de quienes desarrollarán el Proyecto }\\
-%   Diego Restrepo (Investigador Principal)
-%   Enrico Nardi (Co-investigador); \\
-%   N.N (Administrador de Sistemas). % y Auxiliar de Administración).
-
-
-% \item \textbf{Programa de maestría o doctorado que el  grupo apoya}\\
-% Maestría y Doctorado en Física.
-%    \item
-% {\bf Estudiante(s) Nombre, Carné, Programa de Estudios  }\\
-% N.N. Maestría en Física. Corresponde a un estudiante nuevo de la maestría que ingrese para el semestre 2008-1 en la cohorte 27. \\
-
-
-% % \smallskip\noindent (Este proyecto involucra oficialmente el estudiante de
-% % Doctorado Jorge I. Zuluaga, el cual ya tiene los recursos economicos de una
-% % beca de Doctorado de la Universidad de Antioquia.  Sin embargo, por el
-% % desarrollo del Proyecto se involucrará otro estudiante de Doctorado al
-% % cual se brindará una aiuda economica con los recursos del proyecto.)
-
-%    \item
-% {\bf Duración del Proyecto: } \qquad \quad \  12 meses.
-
-%    \item
-% {\bf Valor total del Proyecto: } \qquad  49,000,000 de pesos.
-
-%    \item {\bf Valor aprobado por otra entidad: } \qquad  No Aplica.
-
-%    \item
-% {\bf Valor Solicitado al CODI: } \qquad   25,000,000 de pesos.
-
-% \end{itemize}
-
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% %\newpage
-
-% % \pagenumbering{arabic}
-
-% % \small
 \begin{instrucciones}
   Del investigador para ser asociado:
   \begin{itemize}
@@ -213,7 +138,7 @@ La ficha técnica es el resumen del proyecto, con una extensión máxima de seis
 \input{Cronograma}
 \input{Compromisos}
 \input{Estudiantes}
-
+\input{Otros}
 
 
 
