--- a/Planteamiento_del_Problema.tex
+++ b/Planteamiento_del_Problema.tex
@@ -15,7 +15,14 @@
  CODI: ¿Es la teoría actualizada y acertada con respecto al problema que se va a estudiar? ¿Su formulación es coherente? ¿Es clara la perspectiva teórica desde donde se ubica el problema?
 \end{instrucciones}
 
-El problema que queremos abordar trata acerca de la fenomenología más alla del modelo estándar.
+Con la entrada en operación del LHC, se espera descubrir señales de materia oscura y de modelos que tengan algún mecanismo radiativo para generar masas de neutrinos.
+
+Por otro lado, los recientes datos reportados por las colaboraciones PAMELA y Fermi han impuesto restricciones muy fuertes sobre el flujo de rayos cósmicos provenientes de partículas de materia oscura. Los futuros experimentos de rayos cósmicos, tales como el experimento AMS-02, Planck, IceCube, etc, esperan mejorar la sensibilidad a este tipo de señales. Así mismo, los experimentos de detección directa de materia oscura como DAMA, CDMS, CoGeNT, XENON han creado grandes expectativas por los resultados presentes y los que se espera obtener en los próximos meses. Los experimentos de física de neutrinos y de radiación cósmica de fondo han entrado ya en una era de medidas de precisión.
+
+Con base en lo planteado anteriormente, lo que proponemos en este proyecto es tratar de responder las siguiente pregunta: ¿Cuáles serían las restricciones impuestas por los recientes y futuros datos de todos estos experimentos sobre  modelos que presenten una partícula candidata a materia oscura o que generen masas para los neutrinos?
+
+\begin{ideas}
+  El problema que queremos abordar trata acerca de la fenomenología más alla del modelo estándar.
 %Con la entrada en operación del LHC, se espera descubrir señales de materia oscura y de modelos que tengan algún mecanismo radiactivo para generar masas de neutrinos.
 %Por otro lado, los recientes datos reportados por las colaboraciones PAMELA y Fermi han impuesto restricciones muy fuertes sobre el flujo de rayos cósmicos provenientes de partículas de materia oscura. Los futuros experimentos de rayos cósmicos, tales como el experimento AMS-02, Planck, IceCube, etc, esperan mejorar la sensibilidad a este tipo de señales. Así mismo, los experimentos de detección directa de materia oscura como DAMA, CDMS, CoGeNT, XENON han creado grandes expectativas por los resultados presentes y los que se esperan obtener en los próximos meses. Los experimentos de física de neutrinos y de radiación cósmica de fondo han entrado ya en una era de medidas de precisión.
 Ya que con la entrada en operación del LHC más el tevatrón, se esperan descubrir señales del bosón de Higgs, de la materia oscura, dimensiones extra, supersimetría, etc. En algunos modelos más allá del Modelo Estándar se tienen predicciones concretas sobre los posibles productos de aniquilación y desintegración del candidato a materia oscura que podrían ser detectados en estos aceleradores.La mayoría de los experimentos conducidos son hechos en grandes instrumentos llamados detectores. Por ejemplo el LHC tiene 4 detectores. En dos de ellos ATLAS y CMS hay grupos colombianos participando. En los últimos años el Grupo ha tenido una estrecha vinculación con el Grupo de Marta Losada que esta participando en la colaboración ATLAS.
@@ -116,10 +123,7 @@ De las diferentes posibilidades se pueden construir modelos con
 %esperamos tener una predicción muy concreta para la jerarquía en los acoplamientos $\lambda$, la cual podría dar lugar a señales muy específicas en el LHC. De este modo, en caso de que se descubriera en el LHC un modelo de ruptura de $R$--paridad a través términos $\lambda$, se podría determinar si la simetría Abeliana  $U(1)_H$ con uno ó más flavones es la simetría que explica la jerarquía en la masas de los fermiones.
 En el modelo usual para violación de número leptónico a través de términos $\lambda$, donde se impone una simetría discreta del tipo paridad leptónica, los términos no renormalizables asociados a la masa del neutrino quedan prohibidos, por lo que el mecanismo seesaw no puede ser implementado. En el caso de que la simetría horizontal se use para formular un modelo de este tipo, se puede introducir un nuevo flavón con carga $H$ fraccionaria [del tipo usado en \cite{Chen:2008tc}] que puede dar lugar a un mecanismo de seesaw apropiado para explicar los datos de oscilaciones de neutrinos. En este proyecto pretendemos explorar la posibilidad de obtener una ttextura para las masa de los neutrinos en base a un modelo supersimétrico a la Froggatt-Nielsen, y además obtener un candidato consistente para materia oscura.
 
-\begin{ideas}
-  Material adicional
 \end{ideas}
-
 
 %%% Local Variables: 
 %%% mode: latex
