--- a/Resultados.tex
+++ b/Resultados.tex
@@ -1,5 +1,66 @@
 \section{ Resultados Esperados }
+\begin{instrucciones}
+  Formule los resultados directos verificables que se
+alcanzarán con el desarrollo de los objetivos específicos del proyecto. Estos deben ser coherentes
+con los objetivos y con la metodología planteada.
 
+
+  \begin{enumerate}
+  \item \textbf{Relacionados con la generación de conocimiento y/o nuevos desarrollos
+ tecnológicos:} Incluye resultados/productos que corresponden a nuevo
+ conocimiento científico o tecnológico o a nuevos desarrollos o adaptaciones de
+ tecnología que puedan verificarse a través de publicaciones científicas,
+ productos o procesos tecnológicos, patentes, normas, mapas, bases de datos,
+ colecciones de referencia, secuencias de macromoléculas en bases de datos de
+ referencia, registros de nuevas variedades vegetales, etc.
+\item \textbf{Conducentes al fortalecimiento de la capacidad científica
+  nacional:} Incluye resultados/productos tales como formación de
+  recurso humano a nivel profesional o de posgrado (trabajos de grado
+  o tesis de maestría o doctorado sustentadas y aprobadas),
+  realización de cursos relacionados con las temáticas de los
+  proyectos (deberá anexarse documentación soporte que certifique su
+  realización), formación y consolidación de redes de investigación
+  (anexar documentación de soporte y verificación) y la construcción
+  de cooperación científica internacional (anexar documentación de
+  soporte y verificación).
+\item \textbf{Dirigidos a la apropiación social del conocimiento:}
+  Incluye aquellos resultados/productos que son estrategias o medios
+  para divulgar o transferir el conocimiento o tecnologías generadas
+  en el proyecto a los beneficiarios potenciales y a la sociedad en
+  general. Incluye tanto las acciones conjuntas entre investigadores y
+  beneficiarios como artículos o libros divulgativos, cartillas,
+  videos, programas de radio, presentación de ponencias en eventos,
+  entre otros.
+  \end{enumerate}
+
+  Para cada uno de los resultados/productos esperados identifique (en
+  los cuadros a continuación) indicadores de verificación (ej:
+  publicaciones, patentes, registros, videos, certificaciones, etc.)
+  as\'\i{} como las instituciones, gremios y comunidades beneficiarias,
+  nacionales o internacionales, que podrán utilizar los resultados de
+  la investigación para el desarrollo de sus objetivos, políticas,
+  planes o programas:
+
+\end{instrucciones}
+
+%Final
+Publicar al menos 4 artículos internacionales con algunos de los siguientes resultados:
+
+Determinación de la factibilidad del LHC para determinar las correlaciones de VBPR entre el cociente de branchings de neutralino a W mu y W tau con el ángulo de mezcla atmosférico de neutrinos, así como de la correlación entre la longitud de decaimiento del neutralino y la diferencia de masa al cuadrado atmosférica.
+
+Determinación del flujo de rayos gamas y su confrontación con lo observado en experimentos de rayos cósmicos en modelos supersimétricos donde el gravitino es el CMOI con masa de hasta 80 GeV. 
+
+Determinación de acoplamientos, vida media y masa del gravitino como CMOI en modelos de ruptura trilineal de paridad R (RTPR) con violación de número leptónico, que pueda explicar el exceso de positrones en rayos cósmicos. Predicciones de flujo de positrones y rayos gama del modelo para experimentos futuros de rayos cósmicos. 
+
+Determinación de las restricciones que los diferentes experimentos de rayos cósmicos 
+presentes y futuros imponen sobre el neutralino como CMOI. 
+
+Determinación de las señales en el LHC para 1) Modelos de RTPR con violación de número bariónico y mecanismo see-saw para masas de neutrinos, inducida por una simetría Abeliana anómala U(1). 2) Regiones del espacio de parámetros compatible con física de neutrinos y densidad de materia oscura del seesaw radiativo. 3) Modelos 3-3-1 con cuatro familias
+
+Formación 1 estudiante de maestría y 1 de doctorado.
+
+\begin{ideas}
+  
 %Determinación de la factibilidad del LHC para determinar las correlaciones de VBPR entre el cociente de branchings de neutralino a W mu y W tau con el ángulo de mezcla atmosférico de neutrinos, así como de la correlación entre la longitud de decaimiento del neutralino y la diferencia de masa al cuadrado atmosférica.
 
 Determinación del flujo de rayos gamas y su confrontación con lo observado en experimentos de rayos cósmicos en modelos supersimétricos donde el gravitino es el CMOI.
@@ -18,7 +79,7 @@ Determinación de las señales en el LHC para 1) Modelos de RTPR con violación 
 Esperemos obtener predicciones específicas para modelos supersimétricos con contenido mínimo de partículas y una simetría horizontal anómala $U(1)_H$ que puedan comprobarse directamente en experimentos de rayos cósmicos o de aceleradores de partículas.
 
 Formación 1 estudiante de maestría y 1 de doctorado.
-
+\end{ideas}
 
 %%% Local Variables: 
 %%% mode: latex
