--- a/Metodologia.tex
+++ b/Metodologia.tex
@@ -1,4 +1,21 @@
 \section{ Metodología Propuesta }
+\begin{instrucciones}
+  Esta debe reflejar la estructura lógica y el
+rigor científico del proceso de investigación, empezando por la elección de un enfoque
+metodológico específico y finalizando con la forma como se van a analizar, interpretar y presentar
+los resultados.
+\end{instrucciones}
+%%%
+
+%Final
+Para un modelo que incluya mecanismos de generación radiativa de masas de neutrinos se determina el espacio de parámetros compatible con los datos experimentales sobre física de neutrinos, se calculan los branchings de decaimiento y las secciones eficaces y se establecen correlaciones entre estos observables y los datos de física de neutrinos [7]. Para el caso de VBPR todo esto ya ha sido implementado en el programa computacional SPheno [8]. Finalmente se hace una simulación con PYTHIA [9] de la factibilidad de descubrir el modelo en aceleradores, como hemos venido haciendo con VBPR en [1], y de la viabilidad de medir las correlaciones establecidas, que es uno de los objetivos del proyecto.
+
+Como hemos ya hecho en [3], obtendremos resultados numéricos para los flujos de rayos cósmicos  producidos en el decaimiento del CMOI usando PYTHIA. A partir de los resultados se analizará el tiempo de vida del CMOI  en términos de su masa con el fin de obtener y analizar cuáles serían las regiones del espacio de parámetros restringidas o excluidas por los experimentos de rayos cósmicos.
+
+En este proyecto haremos una implementación del modelo de seesaw radiativo en Micromegas  con el cual se pueden hacer los cálculos de densidad de reliquia, secciones eficaces, amplitudes de decaimiento, etc. Una vez establecidas las regiones del espacio de parámetros relevantes, se procederá con el método para mecanismos de generación radiativa de masas de neutrinos descrito anteriormente.
+
+\begin{ideas}
+  
 
 Los elementos teóricos y conceptuales fundamentales del proyecto que queremos desarrollar
 son los siguientes:
@@ -25,7 +42,7 @@ Para un modelo que incluya mecanismos de generación radiativa de masas de neutr
 %El modelo de seesaw raditivo se estudiara a traves del paquete computacinal micrOMEGAs, con el cual se hacen actualmente a nivel mundial los calculos de densidad de reliquia, secciones eficaces, amplitudes de decaimiento, entre otros en modelos genéricos que pretendan tener canddatos para materia oscura. Además, desarrollaremos scripts que nos permitan hacer el estudio del comportamiento del sector de neutrinos del modelo, para poder compararlo con las observaciones.
 
 Para el caso de modelos con ruptura de paridad $R$ del tipo $\lambda$ y carga $n\ge 0$ debemos encontrar una forma analítica que nos permita predecir el tamaño de los acoplamientos, y entonces establecer observables para el LHC que sean independientes del valor específico de $n$ y que nos permitan hacer predicciones que sean compatibles con las hipótesis de la simetría horizontal usada. Así mismo deberemos determinar la carga fraccionaria más óptima de los nuevos flavones que nos permita explicar de la mejor forma posible los resultados experimentales de oscilaciones de neutrinos y de materia oscura.
-
+\end{ideas}
 
 %%% Local Variables: 
 %%% mode: latex
