setting master file

--- a/Ficha-2011_bsm.tex
+++ b/Ficha-2011_bsm.tex
@@ -131,22 +131,25 @@ La ficha técnica es el resumen del proyecto, con una extensión máxima de seis
 \end{instrucciones}
 
 
-\input{Planteamiento_del_Problema}
-\input{Objetivos}
-\input{Metodologia}
-\input{Resultados}
-\input{Cronograma}
-\input{Compromisos}
-\input{Estudiantes}
-\input{Otros}
+\section{Línea, programa o agenda de investigación en la que se inscribe el proyecto}
 
 
+% replace \include by \input at the end to check the pages
+% In branch release the full document will be generated
+\include{Planteamiento_del_Problema}
+\include{Objetivos}
+\include{Metodologia}
+\include{Resultados}
+\include{Cronograma}
+\include{Compromisos}
+\include{Estudiantes}
+\include{Otros}
 
 \section{ Presupuesto}
 \begin{instrucciones}
   ¿Los rubros son pertinentes? ¿Los montos son los adecuados para cumplir los objetivos del proyecto? ¿El número de investigadores y el tiempo de dedicación son adecuados?
 \end{instrucciones}
-Ver documento adjunto
+Ver documento adjunto 
 
 %\newpage
 \bibliographystyle{apsrev4-1long}
@@ -155,8 +158,7 @@ Ver documento adjunto
 \end{document}
 
 
-
 %%% Local Variables: 
 %%% mode: latex
-%%% TeX-master: Ficha-2011_bsm
+%%% TeX-master: t
 %%% End: 
