--- a/Planteamiento_del_Problema.tex
+++ b/Planteamiento_del_Problema.tex
@@ -1,4 +1,4 @@
-\section{ Planteamiento del Problema }
+\section{Planteamiento del Problema }
 \begin{instrucciones}
   CODI: ¿Está bien definido el problema que se quiere investigar? ¿Es clara su justificación desde el punto de vista académico, científico, tecnológico, social, económico y legal? (15).
 
@@ -7,13 +7,24 @@
   abordar. Formule claramente las preguntas concretas a las cuales se
   quiere responder en el contexto del problema planteado.
 \end{instrucciones}
+%Tesis
+El modelo estándar de las interacciones fundamentales ha sido muy exitoso durante las últimas décadas para explicar la mayoría de los resultados experimentales de física de altas energías. Sin embargo, simultáneamente se ha venido acumulando evidencia experimental que requiere extender el modelo estándar con nuevas partículas.  En éste proyecto se explorarán diferentes extensiones del modelo estándar que explican estos datos y se obtendrán predicciones concretas en experimentos presentes y futuros.
 
+%evidencia 1
+La principal evidencia de necesidad de física más allá del modelo estándar se halla en las medidas de las oscilaciones de neuiontrinos, que a través de muchos experimentos diferentes han logrado establecer que los neutrinos tienen masa y se mezclan entre sí. Si la masa de neutrinos es total o parcialmente explicada por métodos radiativos, no sólo es posible dar cuenta de la pequeñez de las masas de los neutrinos con respecto a la de los otros fermiones, sino también, que modelos de este tipo pueden hacer predicciones muy concretas en aceleradores de partículas, como el LHC. Aún en el caso de modelos tan estudiados de este tipo, como es el caso del modelo supersimétrico con violación bilineal de paridad R, quedan muchos aspectos que explorar. 
 
+%evidencia 2
+En los últimos tiempos, sobre todos después de las medidas de precisión de WMAP, el satelite de la NASA que ha medido con mucha precisión la radiación cósmica de fondo, se ha venido estableciendo la necesidad de una forma de materia compuesta por partículas  débilmente interactuantes (WIMPs de sus siglas en inglés) que se conoce como materia oscura. Esta forma el 22\% de la materia del Universo. Sin embargo, aún no se ha encontrado evidencia directa de la existencia de dicha partícula, y existen modelos incluso donde dicho tipo de materia podría ser indetectable.
+
+%evidencia 3
+La materia oscura puede ser estable o con un tiempo de vida mucho mayor que la edad del Universo. En el caso de materia oscura inestable se esperan señales fuertes en los detectores de rayos cósmicos instalados en satélites artificiales que orbitan la tierra como Fermi-LAT y PAMELA, y en los detectores futuros como AMS-02~\cite{ams:2009}, el cual será instalado en la estación espacial internacional.  De hecho, recientemente se ha encontrado un exceso en positrones que se podría explicar con una partícula de materia oscura que decae principalmente a leptones con una vida media de unos $10^{26}$ seg.
+
+%conclusion
+Un modelo ideal sería uno que de cuenta de las masas y mezclas de neutrinos, tenga un candidato a materia oscura que sirva para explicar el exceso de positrones en experimentos de rayos cósmicos. En este proyecto pretendemos formular un modelo de éstas características, además de explorar otros posibles modelos que puedan dar cuenta de alguna de las observaciones que requieren un extensión del modelo estándar. 
 
 \subsection{Marco teórico}
-\begin{instrucciones}
- CODI: ¿Es la teoría actualizada y acertada con respecto al problema que se va a estudiar? ¿Su formulación es coherente? ¿Es clara la perspectiva teórica desde donde se ubica el problema?
-\end{instrucciones}
+En el grupo nos hemos enfocado en extensiones del moPlanteamiento deldelo estándar que dan cuenta de las masas y mezclas de neutrinos. Hemos estudiado exhaustivamente las predicciones del modelo bilineal con ruptura de paridad R en el Tevatron y el LHC \cite{}
+
 
 Con la entrada en operación del LHC, se espera descubrir señales de materia oscura y de modelos que tengan algún mecanismo radiativo para generar masas de neutrinos.
 
@@ -21,7 +32,18 @@ Por otro lado, los recientes datos reportados por las colaboraciones PAMELA y Fe
 
 Con base en lo planteado anteriormente, lo que proponemos en este proyecto es tratar de responder las siguiente pregunta: ¿Cuáles serían las restricciones impuestas por los recientes y futuros datos de todos estos experimentos sobre  modelos que presenten una partícula candidata a materia oscura o que generen masas para los neutrinos?
 
+
+\subsection{Marco teórico}
+\begin{instrucciones}
+ CODI: ¿Es la teoría actualizada y acertada con respecto al problema que se va a estudiar? ¿Su formulación es coherente? ¿Es clara la perspectiva teórica desde donde se ubica el problema?
+\end{instrucciones}
+
+
 \begin{ideas}
+Se ha calculado el flujo de rayos gamas y confrontarlo con lo observado en experimentos de rayos cósmicos en modelos supersimétricos donde el gravitino es el candidato de materia oscura inestable (CMOI) en la región de masa de hasta 80 GeV. Estudios recientes  muestran que en está región son importantes canales de decaimiento que no se habían considerado previamente [4]. 
+
+
+
   El problema que queremos abordar trata acerca de la fenomenología más alla del modelo estándar.
 %Con la entrada en operación del LHC, se espera descubrir señales de materia oscura y de modelos que tengan algún mecanismo radiactivo para generar masas de neutrinos.
 %Por otro lado, los recientes datos reportados por las colaboraciones PAMELA y Fermi han impuesto restricciones muy fuertes sobre el flujo de rayos cósmicos provenientes de partículas de materia oscura. Los futuros experimentos de rayos cósmicos, tales como el experimento AMS-02, Planck, IceCube, etc, esperan mejorar la sensibilidad a este tipo de señales. Así mismo, los experimentos de detección directa de materia oscura como DAMA, CDMS, CoGeNT, XENON han creado grandes expectativas por los resultados presentes y los que se esperan obtener en los próximos meses. Los experimentos de física de neutrinos y de radiación cósmica de fondo han entrado ya en una era de medidas de precisión.
@@ -125,8 +147,8 @@ En el modelo usual para violación de número leptónico a través de términos 
 
 \end{ideas}
 
+
 %%% Local Variables: 
 %%% mode: latex
-%%% TeX-master: Ficha-2011_bsm
+%%% TeX-master: "Ficha-2011_bsm"
 %%% End: 
-
