--- a/Resultados.tex
+++ b/Resultados.tex
@@ -44,18 +44,16 @@ con los objetivos y con la metodología planteada.
 \end{instrucciones}
 
 %Final
-Publicar al menos 4 artículos internacionales con algunos de los siguientes resultados:
+Publicar al menos 3 artículos internacionales con algunos de los siguientes resultados:
 
 Determinación de la factibilidad del LHC para determinar las correlaciones de VBPR entre el cociente de branchings de neutralino a W mu y W tau con el ángulo de mezcla atmosférico de neutrinos, así como de la correlación entre la longitud de decaimiento del neutralino y la diferencia de masa al cuadrado atmosférica.
 
-Determinación del flujo de rayos gamas y su confrontación con lo observado en experimentos de rayos cósmicos en modelos supersimétricos donde el gravitino es el CMOI con masa de hasta 80 GeV. 
-
-Determinación de acoplamientos, vida media y masa del gravitino como CMOI en modelos de ruptura trilineal de paridad R (RTPR) con violación de número leptónico, que pueda explicar el exceso de positrones en rayos cósmicos. Predicciones de flujo de positrones y rayos gama del modelo para experimentos futuros de rayos cósmicos. 
+Determinación de acoplamientos, vida media y masa del gravitino como CMOI en modelos de ruptura trilineal de paridad R (RTPR) con violación de número leptónico, que pueda explicar el exceso de positrones en rayos cósmicos. Predicciones de flujo de positrones y rayos gama del modelo, para experimentos futuros de rayos cósmicos. 
 
 Determinación de las restricciones que los diferentes experimentos de rayos cósmicos 
 presentes y futuros imponen sobre el neutralino como CMOI. 
 
-Determinación de las señales en el LHC para 1) Modelos de RTPR con violación de número bariónico y mecanismo see-saw para masas de neutrinos, inducida por una simetría Abeliana anómala U(1). 2) Regiones del espacio de parámetros compatible con física de neutrinos y densidad de materia oscura del seesaw radiativo. 3) Modelos 3-3-1 con cuatro familias
+Determinación de las señales en el LHC para 1) Regiones del espacio de parámetros compatible con física de neutrinos y densidad de materia oscura del seesaw radiativo. 
 
 Formación 1 estudiante de maestría y 1 de doctorado.
 
@@ -81,7 +79,3 @@ Esperemos obtener predicciones específicas para modelos supersimétricos con co
 Formación 1 estudiante de maestría y 1 de doctorado.
 \end{ideas}
 
-%%% Local Variables: 
-%%% mode: latex
-%%% TeX-master: Ficha-2011_bsm
-%%% End: 
