--- a/Cronograma.tex
+++ b/Cronograma.tex
@@ -23,9 +23,8 @@ Paralelamente se establecerán las condiciones sobre los cuatro cargas $H$ libre
 
 \end{itemize}
 
-
 %%% Local Variables: 
 %%% mode: latex
-%%% TeX-master: Ficha-2011_bsm
+%%% TeX-master: "Ficha-2011_bsm"
 %%% End: 
 
