small additions to poblema

--- a/Planteamiento_del_Problema.tex
+++ b/Planteamiento_del_Problema.tex
@@ -19,11 +19,41 @@ En los últimos tiempos, sobre todos después de las medidas de precisión de WM
 %evidencia 3
 La materia oscura puede ser estable o con un tiempo de vida mucho mayor que la edad del Universo. En el caso de materia oscura inestable se esperan señales fuertes en los detectores de rayos cósmicos instalados en satélites artificiales que orbitan la tierra como Fermi-LAT y PAMELA, y en los detectores futuros como AMS-02~\cite{ams:2009}, el cual será instalado en la estación espacial internacional.  De hecho, recientemente se ha encontrado un exceso en positrones que se podría explicar con una partícula de materia oscura que decae principalmente a leptones con una vida media de unos $10^{26}$ seg.
 
+%evidencia 4
+Las observaciones astronómicas sugieren que el Universo está compuesto en su mayor parte de materia. En el contexto del big-bang, esto implica que en algún momento grandes cantidades de materia y antimateria se aniquilaron dejando el pequeño exceso de materia que constituye el Universo observable actual. El problema de explicar el exceso inicial de materia sobre antimateria se conoce con el nombre de bariogenesis. Con el modelo estándar no es posible explicar bariogénesis.  
+
 %conclusion
-Un modelo ideal sería uno que de cuenta de las masas y mezclas de neutrinos, tenga un candidato a materia oscura que sirva para explicar el exceso de positrones en experimentos de rayos cósmicos. En este proyecto pretendemos formular un modelo de éstas características, además de explorar otros posibles modelos que puedan dar cuenta de alguna de las observaciones que requieren un extensión del modelo estándar. 
+Un modelo ideal sería uno que de cuenta de las masas y mezclas de neutrinos, tenga un candidato a materia oscura que sirva para explicar el exceso de positrones en experimentos de rayos cósmicos y a la vez contenga los ingredientes para explicar bariogenesis. En este proyecto pretendemos formular un modelo de éstas características, además queremos continuar explorando otros posibles modelos que puedan dar cuenta de alguna de las observaciones que requieren un extensión del modelo estándar.
+
+
+ 
 
 \subsection{Marco teórico}
-En el grupo nos hemos enfocado en extensiones del moPlanteamiento deldelo estándar que dan cuenta de las masas y mezclas de neutrinos. Hemos estudiado exhaustivamente las predicciones del modelo bilineal con ruptura de paridad R en el Tevatron y el LHC \cite{}
+
+\begin{instrucciones}
+ CODI: ¿Es la teoría actualizada y acertada con respecto al problema que se va a estudiar? ¿Su formulación es coherente? ¿Es clara la perspectiva teórica desde donde se ubica el problema?
+\end{instrucciones}
+
+En el grupo nos hemos enfocado en extensiones del modelo estándar que dan cuenta de las masas y mezclas de neutrinos. Hemos estudiado exhaustivamente las predicciones del modelo bilineal con ruptura de paridad R en el Tevatron y el LHC \cite{hep-ph/0304232,hep-ph/0501153,DeCampos:2010yu,deCampos:2008ic,deCampos:2008re,deCampos:2007bn}. La metodología desarrollada la hemos aplicado a otros modelos de generación radiativa de masas de neutrinos con nuevas partículas a la escala del TeV asequibles en el LHC \cite{Sierra:2008wj,AristizabalSierra:2006ri}. Recientemente hemos comenzado a explorar modelos que puedan dar cuenta simultáneamente de masas de neutrinos y candidatos de materia oscura \cite{Hirsch:2005ag,Choi:2010jt,Sierra:2008wj}. Nuestro grupo \cite{Nardi:2008ix} fue uno de los primeros en proponer una explicación en términos de materia oscura inestable para explicar el exceso de positrones observado por el satelite PAMELA en el 2008\cite{Adriani:2008zr}. Luego hemos construido un modelo basado en supersimetría con ruptura de paridad R para explicar la preferencia por decaimientos leptónicos de la partícula de materia oscura, que en este caso es el neutralino. Para ello se ha implementado una simetría horizontal que permite sólo la presencia de acoplamientos trilineales leptónicos \cite{Sierra:2009zq}. En un proyecto en marcha estamos explorando la posibilidad opuesta de un candidato de materia oscura que decae sólo hadrónicamente. La simetría horizontal garantiza que sólo los acoplamientos trilineales de quarks derechos estén permitidos. Finalmente hemos extendido el modelo para incluir masas de neutrinos.
+
+
+%Actualmente se encuentra funcionado el acelerador Tevatron que acelera protones y antiprotones a una energía de 1 TeV, y se espera que siga funcionado por 2 años más. 
+A finales de este año se espera que entre en funcionamiento el acelerador LHC. Este acelerará protones en ambos sentidos a una energía que alcanzará hasta los 14 TeV. 
+%La mayoría de los experimentos conducidos son hechos en grandes instrumentos llamados detectores. Por ejemplo el LHC tiene 4 detectores. Dos ellos ATLAS y CMS, son detectores de propósito general donde se espera explorar señales de nueva física.
+Desde el año pasado varios experimentos sobre rayos cósmicos como ATIC \cite{:2008zzr} y los satélites PAMELA \cite{Adriani:2008zr} y Fermi--LAT \cite{Abdo:2009zk}, han venido reportando un exceso en el flujo de electrones y positrones en rayos cósmicos. Estos resultados han dado lugar a un sinnúmero de publicaciones tratando de explicar su origen. En los próximos meses se esperan medidas de rayos gamma por parte de Fermi--LAT, las cuales pueden ayudar a discernir si el origen de las anomalías detectadas en electrones y positrones es debida a fuentes astrofísicas como pulsares cercanos, o a la aniquilación o el decaimiento de materia oscura. El detector de rayos cósmicos AMS-02~\cite{ams:2009},  que será instalado en la Estación Espacial  internacional, medirá el espectro de antiprotones y positrones en un rango de energía mucho más amplio y con una estadística mucho mejor.
+El satélite Planck fue lanzado en mayo, y desde julio  se encuentra en pleno funcionamiento.  Con los datos obtenidos de este experimento se espera medir la radiación cósmica de fondo con mucha más precisión que su antecesor WMAP. También hay varios experimentos de física de neutrinos en marcha que esperan mejorar los datos actuales de oscilaciones de neutrinos.
+
+
+\subsection{Justificación}
+En este proyecto queremos explorar modelos motivados por falencias 
+
+
+
+
+
+
+ 
+
 
 
 Con la entrada en operación del LHC, se espera descubrir señales de materia oscura y de modelos que tengan algún mecanismo radiativo para generar masas de neutrinos.
@@ -34,9 +64,6 @@ Con base en lo planteado anteriormente, lo que proponemos en este proyecto es tr
 
 
 \subsection{Marco teórico}
-\begin{instrucciones}
- CODI: ¿Es la teoría actualizada y acertada con respecto al problema que se va a estudiar? ¿Su formulación es coherente? ¿Es clara la perspectiva teórica desde donde se ubica el problema?
-\end{instrucciones}
 
 
 \begin{ideas}
