--- a/Resultados.tex
+++ b/Resultados.tex
@@ -79,3 +79,7 @@ Esperemos obtener predicciones específicas para modelos supersimétricos con co
 Formación 1 estudiante de maestría y 1 de doctorado.
 \end{ideas}
 
+%%% Local Variables: 
+%%% mode: latex
+%%% TeX-master: "Ficha-2011_bsm"
+%%% End: 
