--- a/Estudiantes.tex
+++ b/Estudiantes.tex
@@ -23,4 +23,8 @@ Tareas específicas del estudiante de maestría:
 \item Elaborar un borrador con los principales resultados.
 \end{itemize}
 
+%%% Local Variables: 
+%%% mode: latex
+%%% TeX-master: "Ficha-2011_bsm"
+%%% End: 
 
